# discordfs

./: .gitignore  Cargo.toml  README.md  justfile  readme.md
bot/: Cargo.toml
bot/src/: main.rs
web/: Cargo.toml  Trunk.toml  index.html
