[package]
authors.workspace = true
edition.workspace = true
name = "bot"
publish.workspace = true
version.workspace = true

[dependencies]
axum = "0.7.1"
serenity = { version = "0.12.0", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
